<resources>
    <string name="app_name">NewProjectRepo</string>
    <string name="hello_welcome_back">Hello Welcome back!</string>
    <string name="sign_in_to_continue">Sign In to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="log_in">Log In</string>
    <string name="or_login_with">Or Login with</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="sign_up">Sign Up</string>

</resources>