<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="onClick"
            type="android.view.View.OnClickListener" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/glLeft"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.08" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/glRight"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.92" />


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/_12sdp"
                app:layout_constraintEnd_toEndOf="@id/glRight"
                app:layout_constraintStart_toStartOf="@id/glLeft"
              app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvWelcomeBack"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:text="Welcome Back"
                        android:textSize="@dimen/_20ssp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvSignContinue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:text="@string/sign_in_to_continue"
                        android:textColor="#868696"
                        android:textSize="@dimen/_13ssp"
                        app:layout_constraintEnd_toEndOf="@id/tvWelcomeBack"
                        app:layout_constraintStart_toStartOf="@id/tvWelcomeBack"
                        app:layout_constraintTop_toBottomOf="@id/tvWelcomeBack" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/ivEmail"
                        android:layout_width="@dimen/_15sdp"
                        android:layout_height="@dimen/_15sdp"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_20sdp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvSignContinue" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:text="@string/email"
                        android:onClick="@{onClick}"
                        android:textSize="@dimen/_14ssp"
                        app:layout_constraintBottom_toBottomOf="@id/ivEmail"
                        app:layout_constraintStart_toEndOf="@id/ivEmail"
                        app:layout_constraintTop_toTopOf="@id/ivEmail" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/etEmail"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:paddingEnd="@dimen/_8sdp"
                        android:inputType="textEmailAddress"
                        android:singleLine="true"
                        android:imeOptions="actionNext"
                        android:autofillHints="emailAddress"
                        android:maxLines="1"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@id/tvEmail"
                        app:layout_constraintTop_toBottomOf="@id/ivEmail" />

                    <View
                        android:id="@+id/viewFirst"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_margin="@dimen/_10sdp"
                        app:layout_constraintTop_toBottomOf="@id/etEmail"
                        />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/ivPassword"
                        android:layout_width="@dimen/_15sdp"
                        android:layout_height="@dimen/_15sdp"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_18sdp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/viewFirst" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:text="@string/password"
                        android:onClick="@{onClick}"
                        android:textSize="@dimen/_14ssp"
                        app:layout_constraintBottom_toBottomOf="@id/ivPassword"
                        app:layout_constraintStart_toEndOf="@id/ivPassword"
                        app:layout_constraintTop_toTopOf="@id/ivPassword" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/etPassword"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:paddingEnd="@dimen/_8sdp"
                        android:singleLine="true"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:autofillHints="password"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@id/tvPassword"
                        app:layout_constraintTop_toBottomOf="@id/ivPassword" />

                    <View
                        android:id="@+id/viewSecond"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_margin="@dimen/_10sdp"
                        app:layout_constraintTop_toBottomOf="@id/etPassword"
                        />
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvForgotPW"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_12sdp"
                        android:onClick="@{onClick}"
                        android:text="@string/forgot_password"

                        android:textSize="@dimen/_12ssp"
                        android:layout_marginTop="@dimen/_10sdp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/viewSecond" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnLogin"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="@dimen/_25sdp"
                        android:insetLeft="0dp"
                        android:insetTop="0dp"
                        android:insetRight="0dp"
                        android:insetBottom="0dp"
                        android:onClick="@{onClick}"
                        android:text="@string/log_in"
                        app:iconGravity="textEnd"

                        app:iconPadding="@dimen/_20sdp"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_14ssp"
                        app:cornerRadius="10dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@id/tvForgotPW"
                        app:layout_constraintStart_toStartOf="@id/etPassword"
                        app:layout_constraintTop_toBottomOf="@id/tvForgotPW" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</layout>